[gd_scene load_steps=19 format=2]

[ext_resource path="res://Fonts/LCALLIG.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://ControlNodes/BuildAndShop/ItemShop.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 48
font_data = ExtResource( 1 )

[node name="ItemShop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Types" type="Control" parent="Menu"]
anchor_right = 0.15
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Food" type="Button" parent="Menu/Types"]
anchor_right = 1.0
anchor_bottom = 0.333
custom_fonts/font = SubResource( 1 )
text = "Food"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Materials" type="Button" parent="Menu/Types"]
anchor_top = 0.333
anchor_right = 1.0
anchor_bottom = 0.666
custom_fonts/font = SubResource( 2 )
text = "Materials"

[node name="Weapons" type="Button" parent="Menu/Types"]
anchor_top = 0.666
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Weapons"

[node name="Items" type="Control" parent="Menu"]
anchor_left = 0.15
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroller" type="ScrollContainer" parent="Menu/Items"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="Menu/Items/Scroller"]
margin_bottom = 210.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Control" parent="."]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Control" parent="Info"]
anchor_right = 0.25
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Info/Left"]
anchor_right = 1.0
anchor_bottom = 0.2
custom_fonts/font = SubResource( 4 )
text = "Capacity"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Control" parent="Info/Left"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sliders" type="Control" parent="Info/Left/Content"]
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 0.75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Food" type="Label" parent="Info/Left/Content/Sliders"]
anchor_right = 1.0
anchor_bottom = 0.125
custom_fonts/font = SubResource( 5 )
text = "Food:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarF" type="TextureProgress" parent="Info/Left/Content/Sliders"]
anchor_top = 0.125
anchor_right = 1.0
anchor_bottom = 0.25
value = 100.0
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Materials" type="Label" parent="Info/Left/Content/Sliders"]
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.375
custom_fonts/font = SubResource( 5 )
text = "Materials:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarM" type="TextureProgress" parent="Info/Left/Content/Sliders"]
anchor_top = 0.375
anchor_right = 1.0
anchor_bottom = 0.5
value = 75.0
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="Weapons" type="Label" parent="Info/Left/Content/Sliders"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.625
custom_fonts/font = SubResource( 5 )
text = "Weapons:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarW" type="TextureProgress" parent="Info/Left/Content/Sliders"]
anchor_top = 0.625
anchor_right = 1.0
anchor_bottom = 0.75
value = 50.0
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gunpowder" type="Label" parent="Info/Left/Content/Sliders"]
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 0.875
custom_fonts/font = SubResource( 5 )
text = "Gunpowder:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarG" type="TextureProgress" parent="Info/Left/Content/Sliders"]
anchor_top = 0.875
anchor_right = 1.0
anchor_bottom = 1.0
value = 25.0
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Control" parent="Info/Left/Content"]
anchor_left = 0.1
anchor_top = 0.8
anchor_right = 0.9
anchor_bottom = 0.95

[node name="Icon" type="TextureRect" parent="Info/Left/Content/Credits"]
anchor_right = 0.333
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource( 3 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Info/Left/Content/Credits"]
anchor_left = 0.333
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 6 )
text = "empty"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle" type="Control" parent="Info"]
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 1.0

[node name="Title" type="Label" parent="Info/Middle"]
anchor_right = 1.0
anchor_bottom = 0.2
custom_fonts/font = SubResource( 7 )
text = "Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Control" parent="Info/Middle"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Upper" type="Control" parent="Info/Middle/Content"]
anchor_right = 1.0
anchor_bottom = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sell" type="Control" parent="Info/Middle/Content/Upper"]
anchor_right = 0.333
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Info/Middle/Content/Upper/Sell"]
anchor_right = 1.0
anchor_bottom = 0.333
custom_fonts/font = SubResource( 8 )
text = "Sell"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="More" type="Button" parent="Info/Middle/Content/Upper/Sell"]
anchor_top = 0.333
anchor_right = 0.5
anchor_bottom = 0.666
custom_fonts/font = SubResource( 9 )
text = "-10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="One" type="Button" parent="Info/Middle/Content/Upper/Sell"]
anchor_left = 0.5
anchor_top = 0.333
anchor_right = 1.0
anchor_bottom = 0.666
custom_fonts/font = SubResource( 9 )
text = "-1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="All" type="Button" parent="Info/Middle/Content/Upper/Sell"]
anchor_top = 0.666
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 10 )
text = "Empty"

[node name="Cargo" type="Control" parent="Info/Middle/Content/Upper"]
anchor_left = 0.333
anchor_right = 0.666
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Info/Middle/Content/Upper/Cargo"]
anchor_right = 1.0
anchor_bottom = 0.333
custom_fonts/font = SubResource( 8 )
text = "Cargo"
align = 1
valign = 1

[node name="Label" type="Label" parent="Info/Middle/Content/Upper/Cargo"]
anchor_top = 0.333
anchor_right = 1.0
anchor_bottom = 0.666
custom_fonts/font = SubResource( 11 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Control" parent="Info/Middle/Content/Upper"]
anchor_left = 0.666
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="Info/Middle/Content/Upper/Buy"]
anchor_right = 1.0
anchor_bottom = 0.333
custom_fonts/font = SubResource( 8 )
text = "Buy"
align = 1
valign = 1

[node name="One" type="Button" parent="Info/Middle/Content/Upper/Buy"]
anchor_top = 0.333
anchor_right = 0.5
anchor_bottom = 0.666
custom_fonts/font = SubResource( 9 )
text = "+1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="More" type="Button" parent="Info/Middle/Content/Upper/Buy"]
anchor_left = 0.5
anchor_top = 0.333
anchor_right = 1.0
anchor_bottom = 0.666
margin_left = -3.05176e-05
margin_right = -3.05176e-05
custom_fonts/font = SubResource( 9 )
text = "+10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="All" type="Button" parent="Info/Middle/Content/Upper/Buy"]
anchor_top = 0.666
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 12 )
text = "Max"

[node name="Lower" type="Control" parent="Info/Middle/Content"]
anchor_top = 0.45
anchor_right = 1.0
anchor_bottom = 0.95
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trade" type="Button" parent="Info/Middle/Content/Lower"]
anchor_left = 0.3
anchor_top = 0.7
anchor_right = 0.7
anchor_bottom = 1.0
custom_fonts/font = SubResource( 13 )
text = "Trade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountTitle" type="Label" parent="Info/Middle/Content/Lower"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.2
grow_horizontal = 0
custom_fonts/font = SubResource( 14 )
text = "Amount: "
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountValue" type="Label" parent="Info/Middle/Content/Lower"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.2
custom_fonts/font = SubResource( 14 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BalanceTitle" type="Label" parent="Info/Middle/Content/Lower"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.4
grow_horizontal = 0
custom_fonts/font = SubResource( 14 )
text = "Balance: "
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BalanceValue" type="Label" parent="Info/Middle/Content/Lower"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.4
custom_fonts/font = SubResource( 14 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Control" parent="Info"]
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="Info/Right"]
anchor_right = 1.0
anchor_bottom = 0.2
custom_fonts/font = SubResource( 15 )
text = "Information"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Control" parent="Info/Right"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Exit" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -204.58
margin_top = -74.7623
margin_right = -128.58
margin_bottom = -4.76233
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BalanceTitle2" type="Label" parent="Exit"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.4
margin_left = -63.5114
margin_top = -14.0
margin_right = 169.489
margin_bottom = 38.0
grow_horizontal = 0
custom_fonts/font = SubResource( 14 )
text = "Exit "
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
